manifests/odh/maas/external-model.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: external-model
  labels:
    maas.opendatahub.io/gateway-access: 'true'
spec:
  finalizers:
    - kubernetes
