manifests/odh/maas/maas-api.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: redhat-ai-gateway-infra
spec:
  finalizers:
    - kubernetes
