manifests/odh/maas/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: openshift-default
spec:
  controllerName: "openshift.io/gateway-controller/v1"
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: maas-default-gateway
  namespace: openshift-ingress
  annotations:
    opendatahub.io/managed: "false"
    security.opendatahub.io/authorino-tls-bootstrap: "true"
spec:
  gatewayClassName: openshift-default
  infrastructure:
    parametersRef:
      group: ""
      kind: ConfigMap
      name: maas-gateway-options
  listeners:
   - name: http
     hostname: ${MAAS_HOSTNAME}
     port: 80
     protocol: HTTP
     allowedRoutes:
       namespaces:
         from: Selector
         selector:
           matchLabels:
             maas.opendatahub.io/gateway-access: "true"
   - name: https
     hostname: ${MAAS_HOSTNAME}
     port: 443
     protocol: HTTPS
     allowedRoutes:
       namespaces:
         from: Selector
         selector:
           matchLabels:
             maas.opendatahub.io/gateway-access: "true"
     tls:
       certificateRefs:
       - group: ""
         kind: Secret
         name: cert-manager-ingress-cert
       mode: Terminate
